--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -143,6 +143,7 @@ UNORGANIZED
 
 .urgency-statement {
     text-align: center;
+    color: white;
 }
 
 strong {
@@ -234,7 +235,7 @@ SPLASH SCREEN
 
     .splash-text {
 
-        max-width: 900px;
+        max-width: 1000px;
         margin: auto;
 
         .headline {
