--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,7 +14,7 @@ $color3: #00A896;
 $color3-shadow: darken($color1, 10%);
 $color3-highlight: lighten($color1, 10%);
 
-$color4: #02C39A;
+$color4: #e9e9e9;
 $color4-shadow: darken($color1, 10%);
 $color4-highlight: lighten($color1, 10%);
 
@@ -22,17 +22,27 @@ $color5: #C24600;
 $color5-shadow: darken($color1, 10%);
 $color5-highlight: lighten($color1, 10%);
 
+.color1-background {
+    color: white;
+    background: $color1;
+}
 
-$primary: $color1;
-$primary-shadow: #000000;
-$primary-highlight: #000000;
+.color2-background {
+    color: white;
+    background: $color2;
+}
 
-$secondary: $color1;
-$secondary-shadow: $color1-shadow;
-$secondary-highlight: $color1-highlight;
+.color3-background {
+    background: $color3;
+}
 
-$highlight: #000000;
-$highlight-shadow: #000000;
+.color4-background {
+    background: $color4;
+}
+
+.color5-background {
+    background: $color5;
+}
 
 
 /*--------------------
@@ -98,9 +108,12 @@ body {
 }
 
 .row {
-    background: white;
     padding-top: 20px;
     padding-bottom: 20px;
+
+    &.no-pad {
+        padding: 0px;
+    }
 }
 
 
@@ -269,6 +282,15 @@ POINTS
         .point-box {
             padding: 10px;
             border: 1px solid black;
+            text-align: center;
+
+            img {
+                width: 100%;
+            }
+
+            div {
+                padding-top: 10px;
+            }
         }
     }
 }
