--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,20 +7,20 @@ $color1-shadow: darken($color1, 10%);
 $color1-highlight: lighten($color1, 10%);
 
 $color2: #028090;
-$color2-shadow: darken($color1, 10%);
-$color2-highlight: lighten($color1, 10%);
+$color2-shadow: darken($color2, 10%);
+$color2-highlight: lighten($color2, 10%);
 
 $color3: #00A896;
-$color3-shadow: darken($color1, 10%);
-$color3-highlight: lighten($color1, 10%);
+$color3-shadow: darken($color3, 10%);
+$color3-highlight: lighten($color3, 10%);
 
 $color4: #e9e9e9;
-$color4-shadow: darken($color1, 10%);
-$color4-highlight: lighten($color1, 10%);
+$color4-shadow: darken($color4, 10%);
+$color4-highlight: lighten($color4, 10%);
 
-$color5: #C24600;
-$color5-shadow: darken($color1, 10%);
-$color5-highlight: lighten($color1, 10%);
+$color5: #F37021;
+$color5-shadow: darken($color5, 10%);
+$color5-highlight: lighten($color5, 10%);
 
 .color1-background {
     color: white;
@@ -141,19 +141,6 @@ UNORGANIZED
     margin-bottom: 15px;
 }
 
-.cta-button {
-    background-color: #F37021;
-    padding-left: 30px;
-    padding-right: 30px;
-    height: 100px;
-    color: white;
-    border: none;
-    font-size: 1.5em;
-    margin: 0 auto;
-    display: block;
-    margin-bottom: 20px;
-}
-
 .urgency-statement {
     text-align: center;
     color: white;
@@ -191,6 +178,10 @@ HELPER CLASSES
     padding: 20px;
 }
 
+.add-margin-bottom {
+    margin-bottom: 20px;
+}
+
 .pad-top-and-bottom {
     padding: 40px 0px 40px 0px
 }
@@ -203,6 +194,32 @@ HELPER CLASSES
     }
 }
 
+
+
+// Buttons
+button {
+    position: relative;
+    vertical-align: top;
+    height: 60px;
+    padding: 0px 30px 0px 30px;
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+    background: $color5;
+    border: 0;
+    border-bottom: 2px solid $color5-shadow;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 -2px $color5-shadow;
+    box-shadow: inset 0 -2px $color5-shadow;
+}
+
+button:active {
+    top: 1px;
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 
 
 
@@ -260,7 +277,7 @@ SPLASH SCREEN
         .supporting-statement {
             font-family: FuturaLT;
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             color: white;
         }
     }
