--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -37,7 +37,9 @@ $color5-highlight: lighten($color1, 10%);
 }
 
 .color4-background {
-    background: $color4;
+    /*background: $color4;*/
+    background-image:url(../img/iceberg.jpg);
+    height: 1000px;
 }
 
 .color5-background {
@@ -127,11 +129,13 @@ UNORGANIZED
 .bullet-info-area {
     padding-left: 20px;
     padding-right: 20px;
+    color: white;
 }
 
 .cta-area {
-    background-color: #DAECF6;
+    background-color: rgba(218, 236, 246, 0.5);
     padding: 30px 30px;
+
 }
 
 .pre-cta {
