Mess with the footer copy.

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,10 @@ HELPER CLASSES
 .center {
   text-align: center; }
 
+.block-center {
+  display: block;
+  margin: 0 auto; }
+
 .pad {
   padding: 20px; }
 
