--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -185,6 +185,11 @@ HELPER CLASSES
     text-align: center;
 }
 
+.block-center {
+    display: block;
+    margin: 0 auto;
+}
+
 .pad {
     padding: 20px;
 }
