--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,9 @@ body {
     padding: 0px; }
 
 /*--------------------
+NAV BAR
+--------------------*/
+/*--------------------
 UNORGANIZED
 --------------------*/
 .bullet-info-area {
@@ -125,7 +128,8 @@ button {
   border-bottom: 2px solid #d5580c;
   cursor: pointer;
   -webkit-box-shadow: inset 0 -2px #d5580c;
-  box-shadow: inset 0 -2px #d5580c; }
+  box-shadow: inset 0 -2px #d5580c;
+  border-radius: 5px; }
 
 button:active {
   top: 1px;
