--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,6 +18,7 @@ $color4: #e9e9e9;
 $color4-shadow: darken($color4, 10%);
 $color4-highlight: lighten($color4, 10%);
 
+//Button color
 $color5: #F37021;
 $color5-shadow: darken($color5, 10%);
 $color5-highlight: lighten($color5, 10%);
@@ -119,6 +120,20 @@ body {
 
 
 
+/*--------------------
+NAV BAR
+--------------------*/
+
+nav {
+    ul {
+        li {
+
+        }
+    }
+}
+
+
+
 
 /*--------------------
 UNORGANIZED
@@ -212,6 +227,7 @@ button {
     cursor: pointer;
     -webkit-box-shadow: inset 0 -2px $color5-shadow;
     box-shadow: inset 0 -2px $color5-shadow;
+    border-radius: 5px;
 }
 
 button:active {
