--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -366,7 +366,17 @@ POINTS
 
 
 
-.iceberg-background {
-    background-image: url(../img/iceberg.jpg) top center;
+.iceberg {
+    position:relative;
+    background-image: url(../img/iceberg.jpg);
+    background-position: top center;
     background-size: cover;
+
+    .iceberg-bottom {
+        bottom: 50px;
+        position: absolute;
+        width: 100%;
+        padding: 30px;
+        margin:auto;
+    }
 }
