--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,16 @@ COLORS
   background: #ff00b5; }
 
 /*--------------------
-FONTS
+DEFAULTS
 --------------------*/
+.row {
+  padding-top: 50px;
+  padding-bottom: 50px; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: 20px; }
+
 body {
   font-family: "Roboto";
   font-size: 1.8em;
@@ -33,22 +41,15 @@ body {
   line-height: 1.5em; }
 
 h1, h2 {
-  font-family: "Oswald"; }
+  font-family: "Oswald";
+  line-height: 1.3em;
+  margin-bottom: 20px; }
 
 h3 {
   font-weight: 200; }
 
 h4 {
   font-weight: 200; }
-
-/*--------------------
-DEFAULTS
---------------------*/
-.row {
-  padding-top: 50px;
-  padding-bottom: 50px; }
-  .row.no-pad {
-    padding: 0px; }
 
 /*--------------------
 NAV BAR
@@ -99,15 +100,11 @@ HELPER CLASSES
 .right {
   text-align: right; }
 
-.block-center {
-  display: block;
-  margin: 0 auto; }
-
 .pad {
   padding: 20px; }
 
 .add-margin-bottom {
-  margin-bottom: 20px; }
+  margin-bottom: 40px; }
 
 .pad-top-and-bottom {
   padding: 40px 0px 40px 0px; }
@@ -116,6 +113,19 @@ HELPER CLASSES
   display: flex; }
   .flex-container .flex-vcenter {
     align-self: center; }
+
+.no-pad {
+  padding: 0px; }
+
+.no-pad-top {
+  padding-top: 0px; }
+
+.no-pad-bottom {
+  padding-bottom: 0px; }
+
+.no-bottom {
+  padding-bottom: 0;
+  margin-bottom: 0; }
 
 button {
   position: relative;
@@ -132,7 +142,10 @@ button {
   cursor: pointer;
   -webkit-box-shadow: inset 0 -2px #cc0091;
   box-shadow: inset 0 -2px #cc0091;
-  border-radius: 5px; }
+  border-radius: 5px;
+  margin: auto;
+  margin-bottom: 20px;
+  display: block; }
 
 button:active {
   top: 1px;
@@ -221,6 +234,8 @@ POINTS
     width: 100%;
     padding: 30px;
     margin: auto; }
-    .iceberg .iceberg-bottom .quote {
-      padding-right: 60px;
-      font-weight: 200; }
+
+.quote {
+  padding-right: 60px;
+  font-weight: 200;
+  line-height: 1.4em; }
