--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,9 @@ HELPER CLASSES
   padding-bottom: 0;
   margin-bottom: 0; }
 
+.half-pad-top {
+  padding-top: 20px; }
+
 button {
   position: relative;
   vertical-align: top;
@@ -146,6 +149,9 @@ button {
   margin: auto;
   margin-bottom: 20px;
   display: block; }
+  button.inline {
+    display: inline;
+    margin: 0; }
 
 button:active {
   top: 1px;
@@ -162,7 +168,7 @@ SPLASH SCREEN
   position: relative;
   background: none; }
   .splash .background {
-    background: url("../img/happypeople.jpg") center center;
+    background: #7A28CB;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -192,6 +198,12 @@ SPLASH SCREEN
       text-align: center;
       margin-bottom: 20px;
       color: white; }
+  .splash .call-to-action {
+    padding: 10px;
+    max-width: 950px;
+    margin: auto; }
+    .splash .call-to-action .vid-col {
+      padding: 0; }
 
 .videoWrapper {
   position: relative;
