--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -210,6 +210,10 @@ HELPER CLASSES
     margin-bottom: 0;
 }
 
+.half-pad-top {
+    padding-top: 20px;
+}
+
 
 
 
@@ -234,6 +238,11 @@ button {
     margin: auto;
     margin-bottom: 20px;
     display: block;
+
+    &.inline {
+        display: inline;
+        margin: 0;
+    }
 }
 
 button:active {
@@ -260,7 +269,7 @@ SPLASH SCREEN
     .background {
 
         //Backup image for when video fails
-        background: url('../img/happypeople.jpg') center center;
+        background: $color3;
 
         position: absolute;
         width: 100%;
@@ -301,6 +310,16 @@ SPLASH SCREEN
             text-align: center;
             margin-bottom: 20px;
             color: white;
+        }
+    }
+
+    .call-to-action {
+        padding:10px;
+        max-width: 950px;
+        margin: auto;
+
+        .vid-col {
+            padding: 0;
         }
     }
 }
@@ -352,8 +371,6 @@ POINTS
     .stButton_gradient  {
         height: inherit;
     }
-
-
 }
 
 
