--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,11 @@ NAV BAR
 header.navbar {
   background: rgba(73, 67, 104, 0.9);
   border-bottom: #5f5787 1px solid; }
+  header.navbar button {
+    margin: 5px;
+    font-size: 16px;
+    height: 40px;
+    padding: 5px 20px 5px 20px; }
 
 /*--------------------
 UNORGANIZED
