--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -108,9 +108,16 @@ NAV BAR
 --------------------*/
 
 header.navbar {
+    
     background: $color4-alpha;
-
     border-bottom: $color4-highlight 1px solid;
+
+    button {
+        margin: 5px;
+        font-size: 16px;
+        height: 40px;
+        padding: 5px 20px 5px 20px;
+    }
 }
 
 
