--- a/css/styles.css
+++ b/css/styles.css
@@ -62,13 +62,15 @@ input {
 NAV BAR
 --------------------*/
 header.navbar {
-  background: rgba(73, 67, 104, 0.9);
-  border-bottom: #5f5787 1px solid; }
+  background: rgba(0, 0, 0, 0.8); }
   header.navbar button {
     margin: 5px;
     font-size: 16px;
     height: 40px;
     padding: 5px 20px 5px 20px; }
+
+.navbar-logo {
+  height: 25px; }
 
 /*--------------------
 UNORGANIZED
@@ -96,6 +98,9 @@ UNORGANIZED
 .urgency-statement {
   text-align: center;
   color: white; }
+
+.bottom-logo {
+  height: 40px; }
 
 /*--------------------
 COLOR CLASSES
@@ -184,7 +189,8 @@ SPLASH SCREEN
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -2; }
+    z-index: -2;
+    margin-left: -1px; }
     .splash .background video {
       position: absolute;
       min-width: 100%;
