--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -109,8 +109,7 @@ NAV BAR
 
 header.navbar {
     
-    background: $color4-alpha;
-    border-bottom: $color4-highlight 1px solid;
+    background: rgba(0,0,0,0.8);
 
     button {
         margin: 5px;
@@ -120,8 +119,9 @@ header.navbar {
     }
 }
 
-
-
+.navbar-logo {
+    height: 25px;
+}
 
 /*--------------------
 UNORGANIZED
@@ -158,7 +158,9 @@ UNORGANIZED
     color: white;
 }
 
-
+.bottom-logo {
+    height: 40px;
+}
 
 
 
@@ -288,6 +290,7 @@ SPLASH SCREEN
         width: 100%;
         height: 100%;
         z-index: -2;
+        margin-left: -1px;
 
         video {
             position: absolute;
