--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -99,6 +99,21 @@ input {
     border: none;
 }
 
+/*--------------------
+HIDING SHIT
+--------------------*/
+
+@media (max-width: 767px) {
+  .tablet-up {
+    display: none !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .tablet-up {
+    display: block !important;
+  }
+}
 
 
 
@@ -121,6 +136,10 @@ header.navbar {
 
 .navbar-logo {
     height: 25px;
+}
+
+.navbar-inverse .navbar-text {
+    margin-top: 11px;
 }
 
 /*--------------------
@@ -160,6 +179,7 @@ UNORGANIZED
 
 .bottom-logo {
     height: 40px;
+    margin-top: -3px;
 }
 
 
