--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body {
   font-weight: 200;
   line-height: 1.5em; }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: "Oswald";
   line-height: 1.3em;
   margin-bottom: 20px; }
@@ -84,18 +84,23 @@ header.navbar {
 UNORGANIZED
 --------------------*/
 .bullet-info-area {
+  margin-top: 50px;
   padding-left: 20px;
   padding-right: 20px;
   color: white;
   text-size: 1.3em; }
-
-.iceberg-orphan h2 {
-  text-align: center;
-  color: white; }
+  .bullet-info-area h2 {
+    color: white;
+    font-size: 40px; }
+  .bullet-info-area p {
+    font-size: 24px; }
+  .bullet-info-area li {
+    font-size: 20px; }
 
 .cta-area {
   background-color: rgba(218, 236, 246, 0.5);
-  padding: 30px 30px; }
+  padding: 30px 30px;
+  margin-top: 40px; }
 
 .pre-cta {
   font-family: FuturaLT;
@@ -252,7 +257,7 @@ SPLASH SCREEN
 POINTS
 --------------------*/
 .point-headline {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 10px; }
 
 .point-container {
@@ -268,6 +273,10 @@ POINTS
         margin-bottom: 15px; }
       .point-container .point-inner .point-box div {
         padding-top: 10px; }
+
+.point-quote-area {
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 .share-container {
   text-align: center; }
