Fix first quote so not as to exceed the width of the page.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -452,6 +452,10 @@ POINTS
     margin-bottom: 20px;
 }
 
+.first-quote {
+    margin-top: 10px;
+}
+
 .share-container {
     text-align: center;
 
