Fix up the formatting changes in the CTA box.

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,9 @@ UNORGANIZED
   padding: 20px 20px;
   margin-top: 45px; }
 
+.cta-headline {
+  margin-top: 10px; }
+
 .pre-cta {
   font-family: FuturaLT;
   text-align: center;
@@ -241,6 +244,13 @@ SPLASH SCREEN
     .splash .call-to-action .vid-col {
       padding: 0; }
 
+.cta-email {
+  margin-bottom: 15px; }
+
+.cta-button {
+  margin-top: 0;
+  margin-bottom: 10px; }
+
 .cta-alternative {
   text-align: center;
   display: block;
@@ -292,6 +302,9 @@ POINTS
 .point-quote-area {
   margin-top: 20px;
   margin-bottom: 20px; }
+
+.first-quote {
+  margin-top: 10px; }
 
 .share-container {
   text-align: center; }
