--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -182,6 +182,10 @@ UNORGANIZED
 
 }
 
+.cta-headline {
+    margin-top: 10px;
+}
+
 .pre-cta {
     font-family: FuturaLT;
     text-align: center;
@@ -377,6 +381,15 @@ SPLASH SCREEN
             padding: 0;
         }
     }
+}
+
+.cta-email {
+    margin-bottom: 15px;
+}
+
+.cta-button {
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .cta-alternative {
